--- a/maven-art-15-deployment-remote/pom.xml
+++ b/maven-art-15-deployment-remote/pom.xml
@@ -7,9 +7,9 @@
     <version>1.0.4-SNAPSHOT</version>
 
     <scm>
-        <developerConnection>scm:git:https://github.com/alexander-redmann-teaching/maven-art.git</developerConnection>
-        <connection>scm:git:https://alexander-redmann-teaching/maven-art.git</connection>
-        <url>https://github.com/alexander-redmann-teaching/maven-art/tree/15-deployment-remote</url>
+        <developerConnection>scm:git:https://github.com/guhe283/test2.git</developerConnection>
+        <connection>scm:git:https://github.com/guhe283/test2.git</connection>
+        <url>https://github.com/guhe283/test2.git</url>
       <tag>HEAD</tag>
   </scm>
 
