--- a/maven-art-15-deployment-remote/pom.xml
+++ b/maven-art-15-deployment-remote/pom.xml
@@ -9,7 +9,7 @@
     <scm>
         <developerConnection>scm:git:https://github.com/guhe283/test2.git</developerConnection>
         <connection>scm:git:https://github.com/guhe283/test2.git</connection>
-        <url>https://github.com/guhe283/test2.git</url>
+        <url>https://github.com/guhe283/test2/tree/master/maven-art-15-deployment-remote</url>
       <tag>HEAD</tag>
   </scm>
 
