--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.sonatype.training.nxs301</groupId>
     <artifactId>maven-deploy-example</artifactId>
-    <version>1.0.6-SNAPSHOT</version>
+    <version>1.0.7-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -13,11 +13,11 @@
     <distributionManagement>
         <repository>
             <id>nexus</id>
-            <url>http://nexus:8081/repository/maven-releases</url>
+            <url>http://nexus3:8081/repository/maven-releases</url>
         </repository>
         <snapshotRepository>
             <id>nexus</id>
-            <url>http://nexus:8081/repository/maven-snapshots</url>
+            <url>http://nexus3:8081/repository/maven-snapshots</url>
         </snapshotRepository>
     </distributionManagement>
 
