--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.sonatype.training.nxs301</groupId>
-    <artifactId>maven-deploy-example</artifactId>
+    <artifactId>maven-deploy</artifactId>
     <version>1.0.7-SNAPSHOT</version>
 
     <properties>
