--- a/maven-art-15-deployment-remote/pom.xml
+++ b/maven-art-15-deployment-remote/pom.xml
@@ -7,19 +7,19 @@
     <artifactId>deployment-remote</artifactId>
     <version>1.0.10-SNAPSHOT</version>
 
-    <!--<scm>
+    <scm>
         <developerConnection>scm:git:git:https://github.com/guhe283/test2.git</developerConnection>
         <connection>scm:git:https://github.com/guhe283/test2.git</connection>
         <url>https://github.com/guhe283/test2/tree/master/maven-art-15-deployment-remote</url>
-      <tag>HEAD</tag>-->
+      <tag>HEAD</tag>
      
   </scm>
     
-    <scm>
+    <!--<scm>
    <connection>scm:git:https://github.com/guhe283/test2.git</connection>
    <url>https://github.com/guhe283/test2/tree/master/maven-art-15-deployment-remote</url>
    <developerConnection>scm:git:https://github.com/guhe283/test2.git</developerConnection>
-</scm>
+</scm>-->
 
   <distributionManagement>
         <repository>
