--- a/pom.xml
+++ b/pom.xml
@@ -126,8 +126,8 @@
         </dependency>
     </dependencies>
 
-    <profiles>
-        <!--<profile>
+    <!--<profiles>
+        <profile>
             <id>dev</id>
             <properties>
                 <mode>dev</mode>
@@ -137,7 +137,7 @@
                     <filter>src/main/filters/dev.properties</filter>
                 </filters>
             </build>
-        </profile>-->
+        </profile>
         <profile>
             <id>prod</id>
             <activation>
@@ -152,7 +152,7 @@
                 </filters>
             </build>
         </profile>
-    </profiles>
+    </profiles>->>
 
     <reporting>
         <plugins>
