--- a/maven-art-15-deployment-remote/pom.xml
+++ b/maven-art-15-deployment-remote/pom.xml
@@ -79,6 +79,7 @@
                     <tagNameFormat>
                         @{groupId}-@{project.artifactId}-@{project.version}
                     </tagNameFormat>
+                    <pushChanges>false</pushChanges>
                     <providerImplementations>
                         <git>jgit</git>
                     </providerImplementations>
